--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "@aws-amplify/api": "^6.0.42",
     "@aws-amplify/storage": "^6.5.2",
     "@aws-amplify/ui-angular": "^5.0.17",
     "@aws-sdk/client-cognito-identity": "^3.556.0",
@@ -29,6 +30,7 @@
     "braces": ">=3.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "uuid": "^10.0.0",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
