--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,6 +1,6 @@
 {
   "api": {
-    "softcheckgraphapiapi001yo": {
+    "softcheckgraphqlapi001yo": {
       "dependsOn": [
         {
           "attributes": [
@@ -15,9 +15,9 @@
           "additionalAuthenticationProviders": [
             {
               "apiKeyConfig": {
-                "apiKeyExpirationDate": "2024-08-09T21:58:06.722Z",
+                "apiKeyExpirationDate": "2024-08-10T19:57:15.186Z",
                 "apiKeyExpirationDays": 7,
-                "description": "The Key to enable public api request"
+                "description": ""
               },
               "authenticationType": "API_KEY"
             }
